tests/paczka1/fuzzy1/60598978.err
Error in line 8: HqeLWL1aBI S721 37,0
Error in line 36: S721 A415 98,3
Error in line 38: S721 S35 77,3
